[Fix] Board card overflow

--- a/src/views/Boards/styles.scss
+++ b/src/views/Boards/styles.scss
@@ -25,6 +25,14 @@
       font-size: 1rem;
       color: rgb(60, 64, 82);
       font-weight: 500;
+      overflow: hidden;
+      white-space: normal;
+      > span {
+        display: block;
+        overflow-wrap: break-word;
+        word-wrap: break-word;
+        hyphens: auto;
+      }
     }
     .create-board-card {
       height: 60px;
